<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/timer_main_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:src="@drawable/ic_baseline_lock_open_24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="50dp"
            android:id="@+id/lockUnlock"
            android:layout_weight="4"
            android:background="@android:color/transparent"
            android:contentDescription="@string/block_changes"
            android:onClick="lockUnlock"/>
        <TextView
            android:id="@+id/hole_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/hole_time"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textAlignment="center"/>
        <ImageButton
            android:src="@drawable/pause"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:minHeight="50dp"
            android:id="@+id/playPause"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pause"
            android:onClick="playPause"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:textSize="230sp"
        android:text="50"
        android:layout_gravity="center|top"
        android:textColor="#000000"
        android:textAlignment="center"/>
    <ListView
        android:id="@+id/stages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textFilterEnabled="true"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:id="@+id/prevStage"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_cycle"
            android:onClick="prevStage"/>
        <TextView
            android:id="@+id/stage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/stage"
            android:textSize="36sp"
            android:textColor="#000000"
            android:textAlignment="center"/>
        <ImageButton
            android:src="@drawable/ic_baseline_skip_next_24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:id="@+id/nextStage"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_cycle"
            android:onClick="nextStage"/>
    </LinearLayout>
</LinearLayout>