<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="80dp"
    android:layout_gravity="start"
    android:padding="5dp"
    >

    <ImageView
        android:id="@+id/sequenceItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:src="@drawable/directions_walk"
        android:contentDescription="@string/activity_image" />

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="start">
        <TextView
            android:id="@+id/sequenceItemTitle"
            android:text="@string/preparation"
            android:textAlignment="center"
            android:textColor="#0000ff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/deleteValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:src="@drawable/remove_circle"
                android:contentDescription="@string/minus_value" />

            <EditText
                android:id="@+id/sequenceItemValue"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textColor="#0000ff"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Number"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/addValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:contentDescription="@string/plus_value"
                android:src="@drawable/add_circle"/>
        </LinearLayout>

    </LinearLayout>
</TableRow>
