<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/home_page_list_item_style"
    android:id="@+id/mainLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_weight="20"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:focusable="false"
            android:paddingStart="10dp"
            android:text="@string/hello"/>

        <ImageButton
            android:id="@+id/startProgram"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="false"
            android:minHeight="35dp"
            android:minWidth="35dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_media_play"
            android:gravity="right"
            android:onClick="listViewItemOnClick"
            android:contentDescription="@string/start_program" />
        <ImageView
            android:id="@+id/configButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:focusable="false"
            android:layout_height="match_parent"
            android:background="@drawable/baseline_menu"
            android:contentDescription="@string/list_item_configurations" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description, Description, Description, Description, Description, Description, Description,"
        android:layout_marginStart="10dp"
        android:focusable="false"
        android:textSize="15sp"
        android:id="@+id/descriptionTextView"/>
</LinearLayout>